small bug fix on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -355,4 +355,7 @@ div.custom-navbar .icons a {
   .two-column-container-research-projects p{
     display: none;
   }
+  #hide-on-small {
+    display: none;
+  }
 }
